<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="753dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgHabit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:srcCompat="@drawable/habit" />

            <TextView
                android:id="@+id/txtHabit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:text="@string/habit"
                android:textColor="#050E42"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMood"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:srcCompat="@drawable/mood" />

            <TextView
                android:id="@+id/txtMood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_weight="1"
                android:text="@string/mood"
                android:textColor="#050E42"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSetting"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:srcCompat="@drawable/setting" />

            <TextView
                android:id="@+id/txtSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:text="@string/setting"
                android:textColor="#050E42"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                app:srcCompat="@drawable/dashboard" />

            <TextView
                android:id="@+id/txtReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/report"
                android:textColor="#050E42"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>